# unity-mcp-hy3d

./: .gitignore  HOW_TO_ADD_A_TOOL.md  README.md  climber-prompt.md  config.json  example-prompt-v2.md  example-prompt.md  package.json  tool-refactor-plan.md
.github/: FUNDING.yml
Editor/: MCPEditorWindow.cs  UnityMCPBridge.cs
Editor/Commands/: AssetCommandHandler.cs  CommandRegistry.cs  EditorControlHandler.cs  MaterialCommandHandler.cs  ObjectCommandHandler.cs  SceneCommandHandler.cs  ScriptCommandHandler.cs
Editor/Data/: DefaultServerConfig.cs  McpClients.cs
Editor/Helpers/: Response.cs  Vector3Helper.cs
Editor/Models/: Command.cs  MCPConfig.cs  MCPConfigServer.cs  MCPConfigServers.cs  McpClient.cs  McpStatus.cs  McpTypes.cs  ServerConfig.cs
Editor/Tools/: CommandRegistry.cs  ExecuteMenuItem.cs  ManageAsset.cs  ManageEditor.cs  ManageGameObject.cs  ManageScene.cs  ManageScript.cs  ReadConsole.cs
Editor/Windows/: ManualConfigEditorWindow.cs  UnityMCPEditorWindow.cs
Python/: config.py  pyproject.toml  requirements.txt  server.py  unity_connection.py
Python/tools/: __init__.py  asset_tools.py  editor_tools.py  execute_menu_item.py  manage_asset.py  manage_editor.py  manage_gameobject.py  manage_scene.py  manage_script.py  material_tools.py  object_tools.py  read_console.py  scene_tools.py  script_tools.py
UnityMcpBridge/Editor/: UnityMcpBridge.cs
UnityMcpBridge/Editor/Helpers/: ServerInstaller.cs
UnityMcpBridge/Editor/Models/: MCPConfigServers.cs
UnityMcpBridge/Editor/Windows/: UnityMcpEditorWindow.cs
UnityMcpServer/src/: pyproject.toml
