[project]
name = "unity-mcp"
version = "0.1.0"
description = "Unity MCP Server: A Unity package for Unity Editor integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2",
  "mcp[cli]>=1.4.1",
  "uvicorn>=0.29.0",
  "fastapi>=0.111.0",
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "server", "unity_connection"]
packages = ["tools"]
